# structured-compiletest-directives

./: Cargo.toml  README.md  rustfmt.toml
compiletest/: Cargo.toml
compiletest/src/: lib.rs
compiletest_cli/: Cargo.toml
compiletest_cli/src/: logging.rs  main.rs
example_tests/ui/: dyn-star-box.rs
