[workspace]
resolver = "2"
members = [
    "compiletest",
    "compiletest_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
fs-err = "2.11.0"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
